force-app/main/default/objects/SalesOffice__c/SalesOffice__c.object-meta.xml
<CustomObject>
    
    <label>Escritório de Vendas</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escritórios de Vendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>