force-app/main/default/objects/SalesOffice__c/fields/GGN__c.field-meta.xml
<CustomField>
    <fullName>GGN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Gerente Geral de Negócios</inlineHelpText>
    <label>GGN</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesOffices</relationshipName>
    <type>Lookup</type>
</CustomField>