force-app/main/default/objects/SalesOffice__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Escritórios de Vendas</relationshipLabel>
    <relationshipName>SalesOffices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>