force-app/main/default/objects/SalesOffice__c/fields/SalesDirector__c.field-meta.xml
<CustomField>
    <fullName>SalesDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo opcional de diretor para o escritorio de vendas</description>
    <label>Diretor de vendas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escrit_rios_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>