force-app/main/default/objects/SalesOffice__c/fields/SeedsCoordinator__c.field-meta.xml
<CustomField>
    <fullName>SeedsCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador de Sementes</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escrit_rios_de_Vendas1</relationshipName>
    <type>Lookup</type>
</CustomField>