force-app/main/default/objects/SalesOffice__c/fields/SpecialtiesCoordinator__c.field-meta.xml
<CustomField>
    <fullName>SpecialtiesCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador de Especialidades</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escrit_rios_de_Vendas2</relationshipName>
    <type>Lookup</type>
</CustomField>