force-app/main/default/objects/SalesOffice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>ParentId__c</columns>
    <columns>GGN__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>